fix(styles): set absolute objects width & height = 0 until visible

--- a/main.css
+++ b/main.css
@@ -117,10 +117,12 @@ body {
     height: 128px;
     background-color: black;
 
-    transition: all 300ms;
+    transition: opacity 300ms;
 }
 
 .demo_hidden {
+    width: 0;
+    height: 0;
     opacity: 0;
 }
 
@@ -139,10 +141,12 @@ body {
     align-items: center;
     background-color: var(--background-error);
 
-    transition: all 300ms;
+    transition: opacity 300ms;
 }
 
 .error_hidden {
+    width: 0;
+    height: 0;
     opacity: 0;
 }
 
